--- a/estilo.css
+++ b/estilo.css
@@ -1,70 +1,112 @@
-body{
-    background-color: firebrick;
-}
-.grid-container {
-display: grid;
-grid-template-columns: auto auto auto;
-grid-gap: 10px;
-background-color: orangered;
-padding: 10px;
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.grid-container > div {
-background-color: rgb(97, 0, 0);
-text-align: center;
-padding: 20px 0;
-font-size: 30px;
+html {
+  height: 100%;
 }
 
-.item1 {
-grid-column-start: 1;
-grid-column-end: 100;
-grid-row-start: 1;
-grid-row-end: 20;
-background-color: darkred;
-color: white;
-}
-.item6 {
-grid-column-start: 1;
-grid-column-end: 100;
-background-color: darkred;
-color: white;
-}
-.item2 {
-grid-column-start: 1;
-grid-column-end: 15;
-grid-row-start: 20;
-grid-row-end: 80;
-background-color: darkred;
-color: white;
-align-items: left;
+/* body {
+  font-family: "Public Sans", sans-serif;
+  font-size: 1.2rem;
+  min-height: 100%;
+} */
 
+.grid-container > * {
+  box-shadow: -1px 1px 7px 0px rgba(0, 0, 0, 0.75);
+  border-radius: 4px;
+  padding: 10px;
+  text-align: center;
 }
-.item3 {
-grid-column-start: 15;
-grid-column-end: 100;
-grid-row-start: 20;
-grid-row-end: 40;
-background-color: darkred;
-color: white;
+
+.header {
+  grid-area: header; 
+  background-color: #bcc2c9;
 }
-.item4 {
-grid-column-start: 15;
-grid-column-end: 100;
-grid-row-start: 40;
-grid-row-end: 60;
-background-color: darkred;
-color: white;
+
+.menuBar {
+  position: fixed;
+   top: 5% ; 
+   width: 100%; 
+  background-color: #f5f5f5;
+  display: inline;
 }
-.item5 {
-grid-column-start: 15;
-grid-column-end: 100;
-grid-row-start: 60;
-grid-row-end: 80;
-background-color: darkred;
-color: orangered;
+#horizontal li{
+  display: inline;
+  margin-left:100px;
+  
 }
-a{
-color: red; 
-text-decoration: none;
+.footer {
+  position: fixed;
+   top: 90% ; 
+   width: 100%; 
+  background-color: #f5f5f5;
 }
+
+.sidebar {
+  grid-area: sidebar;
+  background-color: #fdcfcf;
+}
+
+.mainLeft {
+  background-color: #c98888;
+  width: 49%;
+  float: left;
+  height: 700px;
+}
+.mainRight {
+  background-color: #f5ffbf;
+  width: 50%;
+  height: 700px;
+  float:right;
+}
+
+
+/* .footer {
+  grid-area: footer; 
+  background-color: #8c96a0;
+} */
+
+ /* .grid-container {
+  display: grid;
+  gap: 10px;
+  grid-template:
+    "header"  100px
+    "navbar"  50px
+    "main"    auto
+    "sidebar" 100px
+    "footer"  100px;
+}  */
+
+/* @media (min-width: 600px) {
+  .grid-container {
+    /* grid-template-columns: 200px auto;
+    grid-template-rows: 100px 50px auto 100px;
+    grid-template-areas: 
+    "header  header"
+    "navbar  navbar"
+    "sidebar main"
+    "footer  footer"; */
+
+   /*  grid-template:
+      "header  header" 100px
+      "navbar  navbar" 50px
+      "sidebar main"   auto
+      "footer  footer" 100px /
+      200px    auto;
+  }
+} */
+
+/* @media (min-width: 900px) {
+  .grid-container {
+    grid-template:
+      "header  header header"  100px
+      "navbar  main   sidebar" auto
+      "footer  footer footer"  100px /
+      200px    auto   200px;
+  }
+} */
